--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,4 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 
+loadbalancing.restaurant-service.sefa-restaurant-service-41421_41421.weight=1.0
