--- a/application.properties
+++ b/application.properties
@@ -11,5 +11,5 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 
-loadbalancing.restaurant-service.sefa-restaurant-service-41421_41421.weight=0.5
-loadbalancing.restaurant-service.sefa-restaurant-service-37269_37269.weight=0.5
+loadbalancing.restaurant-service.sefa-restaurant-service-41421_41421.weight=0.7942263602197153
+loadbalancing.restaurant-service.sefa-restaurant-service-37269_37269.weight=0.20577363978028473
