--- a/application.properties
+++ b/application.properties
@@ -11,6 +11,4 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 
-loadbalancing.restaurant-service.sefa-restaurant-service-41421_41421.weight=0.18945596354054212
-loadbalancing.restaurant-service.sefa-restaurant-service-37269_37269.weight=0.1798488894550698
-loadbalancing.restaurant-service.sefa-restaurant-service-37827_37827.weight=0.630695147004388
+loadbalancing.restaurant-service.sefa-restaurant-service-37827_37827.weight=1.0
