ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -11,5 +11,6 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 
-loadbalancing.restaurant-service.sefa-restaurant-service-37827_37827.weight=0.5
-loadbalancing.restaurant-service.sefa-restaurant-service-44317_44317.weight=0.5
+loadbalancing.restaurant-service.sefa-restaurant-service-37827_37827.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service-44317_44317.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service-40513_40513.weight=0.3333333333333333
