--- a/application.properties
+++ b/application.properties
@@ -10,6 +10,7 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.3333333333333333
-loadbalancing.restaurant-service.sefa-restaurant-service-40129_40129.weight=0.3333333333333333
-loadbalancing.restaurant-service.sefa-restaurant-service-41677_41677.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-40129_40129.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-41677_41677.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-36695_36695.weight=0.25
