ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -10,7 +10,6 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-40129_40129.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-41677_41677.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-36695_36695.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.5802220941728014
+loadbalancing.restaurant-service.sefa-restaurant-service-41677_41677.weight=0.22213032180126424
+loadbalancing.restaurant-service.sefa-restaurant-service-36695_36695.weight=0.19764758402593444
