--- a/application.properties
+++ b/application.properties
@@ -10,6 +10,7 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.restaurant-service.sefa-restaurant-service-40575_40575.weight=0.3333333333333333
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.3333333333333333
-loadbalancing.restaurant-service.sefa-restaurant-service-34751_34751.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service-40575_40575.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-34751_34751.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-38573_38573.weight=0.25
