ConfigManagerActuator: changing properties

--- a/application.properties
+++ b/application.properties
@@ -10,7 +10,7 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.restaurant-service.sefa-restaurant-service-40575_40575.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-34751_34751.weight=0.25
-loadbalancing.restaurant-service.sefa-restaurant-service-38573_38573.weight=0.25
+loadbalancing.restaurant-service.sefa-restaurant-service-40575_40575.weight=0.1
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.5875463924964281
+loadbalancing.restaurant-service.sefa-restaurant-service-34751_34751.weight=0.1
+loadbalancing.restaurant-service.sefa-restaurant-service-38573_38573.weight=0.21245360750357203
