--- a/application.properties
+++ b/application.properties
@@ -10,5 +10,6 @@ management.endpoint.env.post.enabled=true
 # PROPERTY_PARENT.global.PROPERTY_ELEMENT[.PROPERTY_ELEMENT]*=PROPERTY_VALUE
 
 loadbalancing.global.type=WEIGHTED_RANDOM
-loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.5
-loadbalancing.restaurant-service.sefa-restaurant-service-33619_33619.weight=0.5
+loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service-33619_33619.weight=0.3333333333333333
+loadbalancing.restaurant-service.sefa-restaurant-service-42467_42467.weight=0.3333333333333333
