--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,4 @@ management.endpoint.env.post.enabled=true
 
 loadbalancing.global.type=WEIGHTED_RANDOM
 loadbalancing.restaurant-service.sefa-restaurant-service_58085.weight=1.0
+loadbalancing.delivery-proxy-service.sefa-delivery-proxy-1-service-33159_33159.weight=1.0
